NSCI0011/python_methods/html/reports/homework_answers.log
Traceback (most recent call last):
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
:::{solution} exercise_increase_by_one
a\.
```
>>> val = 5.0
>>> increase_by_one(val)
>>> print(val)
6.0
```
b\.
```
>>> val = "hello"
>>> increase_by_one(val)
>>> print(val)
hello1
```
c\.
```
>>> val = [0, 0, 0]
>>> increase_by_one(val)
>>> print(val)
[0, 0, 0, 1]
```
d\.
```
>>> val = np.array([0, 0, 0])
>>> increase_by_one(val)
>>> print(val)
[0 0 0 1]
```
------------------

[1;36m  File [1;32m"C:\Users\NatSciTeaching\AppData\Local\Temp\ipykernel_11400\200630475.py"[1;36m, line [1;32m1[0m
[1;33m    :::{solution} exercise_increase_by_one[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (200630475.py, line 1)

